--- a/package.json
+++ b/package.json
@@ -1,23 +1,26 @@
 {
   "name": "coinflip",
   "version": "1.0.0",
-  "description": "This is a simple package that emulates coinflips in several ways",
+  "type": "module",
+  "description": "This is a simple package that emulates coin flips in several different ways.",
   "main": "flip.js",
   "scripts": {
-    "flip":"node flip.js",
+    "flip": "node flip.js",
     "flips": "node flips.js",
     "guess-flip": "node guess-flip.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://bmh14: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@github.com/comp426-2022-spring/a02-bmh14.git"
+    "url": "git+https://github.com/comp426-2022-spring/a02-erayala15.git"
   },
-  "author": "bmh14",
+  "author": "Ethan David Rayala",
   "license": "GPL-3.0-or-later",
-  "type": "module",
   "bugs": {
-    "url": "https://github.com/comp426-2022-spring/a02-bmh14/issues"
+    "url": "https://github.com/comp426-2022-spring/a02-erayala15/issues"
   },
-  "homepage": "https://github.com/comp426-2022-spring/a02-bmh14#readme"
+  "homepage": "https://github.com/comp426-2022-spring/a02-erayala15#readme",
+  "dependencies": {
+    "minimist": "^1.2.5"
+  }
 }
